# surrealDbLiveQuery

./: .eslintrc.cjs  README.md  package.json  userJourney.md
client/: README.md  config.ts  middleware.ts  package-lock.json  tsconfig.json
client/app/: globals.css
client/app/clientComp/: layout.tsx  page.tsx
client/app/login/: page.tsx
client/components/: ClientCopm.tsx  Form.tsx
client/components/button/: Button.tsx
client/hooks/: ex.ts  indexDB.hooks.ts  login.hooks.ts
client/src/connector/: db.connector.ts  useProduct.ts
client/types/: cookies.types.ts  result.ts
client/utils/: login.utils.ts  regex.utils.ts  sessionStorage.utils.ts
common/: orders.ts  users.ts
db/: migrationV1.surql  newSurrealDb.surql  readme.md
server/: .env  Cargo.toml
server/bindings/: Db.ts  JwtStruct.ts  Merchants.ts  Namespace.ts  Scope.ts
server/src/: auth_service.rs  config.rs  main.rs  server.http
server/src/common/: error.rs  merchant.rs  mod.rs
server/src/controller/: mod.rs
server/src/controller/login/: login.http  login.rs  mod.rs  signup.http  signup.rs
server/src/controller/users/: mod.rs  user.http
server/src/db/: accounts.rs  merchants.rs  mod.rs  scopes.rs  user.txt  users.rs
src/: App.tsx
src/connector/: product.ts
