[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1"
futures = "0.3"
actix-web = "4"
ts-rs = {version = "7.0",features = ["serde-compat"]}
derive_more = "0.99.17"
surrealdb = "1.0.0"
once_cell = "1.18.0"
jsonwebtoken = "8.3.0"
chrono = "0.4.31"
env_logger = "0.10.0"
cargo-watch = "8.4.1"
dotenv = "*"
actix-cors = "0.6.5"

# [build]
# rustflags = ["-Z", "threads=8"]